This is a final portfolio for Assignment 1 to be continued to work on

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 		<!--This div contains the side bar content-->
-		<div id="sideBar">
+		<div id="sideBarAbout">
 			<h3>Connect with Me</h3>
 			<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png"></a>
 			<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png"></a>
