Corrected some text elements that were incorrect and fixed the linked In logo

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 		<!--This div contains the side bar content-->
 		<div id="sideBarAbout">
 			<h3>Connect with Me</h3>
-			<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png"></a>
-			<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png"></a>
-			<a target="_blank" href="https://www.linkedin.com/in/david-hammond-96b1b8137/"><img src="assets/images/linked.jpg"></a>
+				<!--Created this to center the icons-->
+				<div id="centerIcon">
+					<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png"></a>
+					<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png"></a>
+					<a target="_blank" href="https://www.linkedin.com/in/david-hammond-96b1b8137/"><img src="assets/images/linkedin.png"></a>
+				</div>
 		</div>
 		<!--This is the footer-->
 		<footer>
