Changed entire positioning of internal content from relative positioning to use floats to ensure contnet aligns exactly on each page

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
   			<input type="submit" value="Submit">
 		</div>
 		<!--This div contains the side bar content-->
-		<div id="sideBarContact">
+		<div id="sideBar">
 			<h3>Connect with Me</h3>
 			<div id="centerIcon">
 				<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png"></a>
