--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 		<!--This div contains the side bar content-->
-		<div id="sideBarAbout">
+		<div id="sideBar">
 			<h3>Connect with Me</h3>
 				<!--Created this to center the icons-->
 				<div id="centerIcon">
