--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<!--This div contains the side bar content-->
-		<div id="sideBarPort">
+		<div id="sideBar">
 			<h3>Connect with Me</h3>
 			<div id="centerIcon">
 				<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png"></a>
