Fixed Portfolio page to float vs position relative and fixed contact page-this push is prior to adding images to portfolio

--- a/contact.html
+++ b/contact.html
@@ -28,13 +28,13 @@
 			<h2>Contact</h2>
 			<form action="#">
 			 <p>First name:</p>
-  			<input type="text" name="firstname" value="Your">
+  			<input type="text" name="Name:" value="Your Name" size="35">
   			<br>
   			<p>Last name:</p>
-  			<input type="text" name="lastname" value="Name">
+  			<input type="text" name="Email:" value="example@gmail.com" size="35">
   			<br>
   			<p>Message:</p>
-  			<textarea name="message" rows="10" cols="30"></textarea>
+  			<textarea name="message" rows="10" cols="30" >Your Message Here</textarea>
   			<br><br>
   			<input type="submit" value="Submit">
 		</div>
