Finished the text up Portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,19 +28,29 @@
 			<h2>Portfolio</h2>
 			<div id="boxSet">
 				<div id="hang" class="box">
-					<p>Hangman</p>
+					<div class="titleBox">
+						<p class="smallTitle">Hangman</p>
+					</div>
 				</div>
 				<div id="rpg" class="box">
-					<p>RPG Game</p>
+					<div class="titleBox">
+						<p class="smallTitle">RPG Game</p>
+					</div>
 				</div>
 				<div id="trivia" class="box">
-					<p>Trivia Game</p>
+					<div class="titleBox">
+						<p class="smallTitle">Trivia Game</p>
+					</div>
 				</div>
 				<div id="rutgers" class="box">
-					<p>Rutgers Info Widget</p>
+					<div class="titleBox">
+						<p class="fatTitle">Rutgers Info Widget</p>
+					</div>
 				</div>
 				<div id="rock" class="box">
-					<p>Rock Paper Scissors</p>
+					<div class="titleBox">
+						<p class="fatTitle">Rock Paper Scissors</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -48,16 +58,17 @@
 		<div id="sideBar">
 			<h3>Connect with Me</h3>
 			<div id="centerIcon">
-				<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png"></a>
-				<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png"></a>
-				<a target="_blank" href="https://www.linkedin.com/in/david-hammond-96b1b8137/"><img src="assets/images/linkedin.png"></a>
+				<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png" alt="Github"></a>
+				<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
+				<a target="_blank" href="https://www.linkedin.com/in/david-hammond-96b1b8137/"><img src="assets/images/linkedin.png" alt="LinkedIn"></a>
 			</div>
 		</div>
 		<!--This is the footer-->
 		<footer>
-			<p>&copyCopyright 2017 David Hammond</p>
+			<p>&copy;Copyright 2017 David Hammond</p>
 		</footer>
 		</div>
 		</div>
+	</div>
 </body>
 </html>
