--- a/contact.html
+++ b/contact.html
@@ -27,31 +27,31 @@
 		<div id="content">
 			<h2>Contact</h2>
 			<form action="#">
-			 <p>First name:</p>
+			 <p class="textShift">NAME:</p>
   			<input type="text" name="Name:" value="Your Name" size="35">
-  			<br>
-  			<p>Last name:</p>
+  			<p class="textShift">EMAIL ADDRESS:</p>
   			<input type="text" name="Email:" value="example@gmail.com" size="35">
-  			<br>
-  			<p>Message:</p>
+  			<p class="textShift">Message:</p>
   			<textarea name="message" rows="10" cols="30" >Your Message Here</textarea>
   			<br><br>
   			<input type="submit" value="Submit">
+  			</form>
 		</div>
 		<!--This div contains the side bar content-->
 		<div id="sideBar">
 			<h3>Connect with Me</h3>
 			<div id="centerIcon">
-				<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png"></a>
-				<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png"></a>
-				<a target="_blank" href="https://www.linkedin.com/in/david-hammond-96b1b8137/"><img src="assets/images/linkedin.png"></a>
+				<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png" alt="Github"></a>
+				<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
+				<a target="_blank" href="https://www.linkedin.com/in/david-hammond-96b1b8137/"><img src="assets/images/linkedin.png" alt="LinkedIn"></a>
 			</div>
 		</div>
 		<!--This is the footer-->
 		<footer>
-			<p>&copyCopyright 2017 David Hammond</p>
+			<p>&copy;Copyright 2017 David Hammond</p>
 		</footer>
 		</div>
 		</div>
+	</div>
 </body>
 </html>
