--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!--This div contains the content portion-->
 		<div id="content">
 			<h2>About Me</h2>
-			<img id="mainImage" src="assets/images/headshot_closeup.jpg">
+			<img id="mainImage" src="assets/images/headshot_closeup.jpg" alt="This is me">
 			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -44,16 +44,17 @@
 			<h3>Connect with Me</h3>
 				<!--Created this to center the icons-->
 				<div id="centerIcon">
-					<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png"></a>
-					<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png"></a>
-					<a target="_blank" href="https://www.linkedin.com/in/david-hammond-96b1b8137/"><img src="assets/images/linkedin.png"></a>
+					<a target="_blank" href="http://github.com/901david/"><img src="assets/images/gitlogo.png" alt="Github"></a>
+					<a target="_blank" href="http://stackoverflow.com/users/7826396/901david?tab=profile"><img src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
+					<a target="_blank" href="https://www.linkedin.com/in/david-hammond-96b1b8137/"><img src="assets/images/linkedin.png" alt="LinkedIn"></a>
 				</div>
 		</div>
 		<!--This is the footer-->
 		<footer>
-			<p>&copyCopyright 2017 David Hammond</p>
+			<p>&copy;Copyright 2017 David Hammond</p>
 		</footer>
 		</div>
 		</div>
+	</div>
 </body>
 </html>
