--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
 		<div id="content">
 			<h2>Contact</h2>
 			<form action="#">
-			 <p class="textShift">NAME:</p>
+			 <p class="contactText">NAME:</p>
   			<input type="text" name="Name:" value="Your Name" size="35">
-  			<p class="textShift">EMAIL ADDRESS:</p>
+  			<p class="contactText">EMAIL ADDRESS:</p>
   			<input type="text" name="Email:" value="example@gmail.com" size="35">
-  			<p class="textShift">Message:</p>
+  			<p class="contactText">Message:</p>
   			<textarea name="message" rows="10" cols="30" >Your Message Here</textarea>
   			<br><br>
   			<input type="submit" value="Submit">
