--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div id="content">
 			<h2>About Me</h2>
 			<img id="mainImage" src="assets/images/headshot_closeup.jpg" alt="This is me">
-			<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p id="mainText"> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
